src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --text-primary-light: #0f172a;
    --text-primary-dark: #e2e8f0;
    --text-secondary-light: #1e293b;
    --text-secondary-dark: #cbd5e1;
    --text-blue: #67e8f9;
    --bg-primary-light: ;
    /* --bg-primary-dark: 
    --bg-secondary-light:
    --bg-secondary-dark: */
  }

  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Firefox */
  input[type="number"] {
    -moz-appearance: textfield;
  }

  /* width */
  ::-webkit-scrollbar {
    width: 8px;
  }
  /* Track */
  ::-webkit-scrollbar-track {
    background: transparent;
    margin-bottom: 1.5rem;
    margin-top: 1.5rem;
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #f8f8f8;
    border-radius: 20px;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555;
  }
}

body {
  overflow: hidden;
}
@layer components {
  .icon {
    @apply w-6 h-6 dark:group-hover:text-gray-200;
  }
}

